--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -438,7 +438,7 @@ CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_PRINT_VMEMLAYOUT=y
 CONFIG_ARM64_TAGGED_ADDR_ABI=y
 CONFIG_COMPAT_VDSO=y
-CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY=y
+# CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY is not set
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
